Fix metric bar gap

--- a/src/renderer/components/metric-bar/metric-bar.module.scss
+++ b/src/renderer/components/metric-bar/metric-bar.module.scss
@@ -7,7 +7,7 @@
   --metric-color: gray;
 
   display: flex;
-  gap: 0.5rem;
+  gap: var(--padding);
   align-items: center;
 }
 
